--- a/www/main.css
+++ b/www/main.css
@@ -375,23 +375,21 @@ div.message > div.message-box {
 
 /* ChatInput styles */
 #chatroom-footer {
-  color: white;
-  position: fixed;
-  padding: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 50px;
+    color: white;
+    position: fixed;
+    padding: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
 }
+
 
 #chatroom-footer .input-field input,
 button {
   border-color: #FFFFFF;
 }
 
-.chip {
-  font-style: italic;
-}
 
 /* ChatHistory styles */
  ul.collection{
@@ -422,19 +420,16 @@ p {
 
 
 .input-box-pane .msg-send-btn{
-    padding-top: 10px;
     background: rgb(132,116,159) !important;
     color: white;
-    height: 45px;
+    height: 50px;
     text-align: center !important;
 }
 
 .input-box-pane textarea{
-  height: 40px;
+  height: 55px;
   resize: none;
   width: 100%;
-  padding: 8px;
-  border: 1px solid #eee;
 }
 .page__content{
 	padding: 5px !important;
@@ -7555,6 +7550,10 @@ h4, h5, h6 {
 	display: none;
 }
 
+.chatroom-listing .card:not(:last-child){
+	margin-bottom: 5px;
+}
+
 .card{
 
 	background : #fff;
@@ -7570,13 +7569,19 @@ h4, h5, h6 {
 	background-color: #eee !important; 
 }
 
-/* background: transparent !important; */
+.list-header--material {
+     background: #eee; 
+     padding: 15px 0px;
+}
 
 .list{
-	/*background: #eee !important;	*/
+	background: #eee !important;
+	margin-bottom: 5px;	
+	overflow: inherit !important;
 }
 .list-header{
-	padding: 10px 5px;
+	font-size: 15px !important;
+	padding: 10px 0px 0px !important;
 }
 
 .list-item{
