--- a/www/main.css
+++ b/www/main.css
@@ -7626,30 +7626,30 @@ ons-tab.active{
 
 /* Hometab  */
 ons-tab.home-tab .ons-icon{
- background-image: url('/assets/home-icon-primary.svg');
+ background-image: url('/assets/home-icon-primary.png');
 }
 
 ons-tab.home-tab.active .ons-icon{
- background-image: url('/assets/home-icon.svg');
+ background-image: url('/assets/home-icon.png');
 }
 
 /* Community  */
 ons-tab.community-tab .ons-icon{
- background-image: url('/assets/community-icon-primary.svg');
+ background-image: url('/assets/community-icon-primary.png');
 }
 
 ons-tab.community-tab.active .ons-icon{
- background-image: url('/assets/community-icon.svg');
+ background-image: url('/assets/community-icon.png');
 }
 
 
 /* Parenting  */
 ons-tab.parenting-tab .ons-icon{
- background-image: url('/assets/parenting-icon-primary.svg');
+ background-image: url('/assets/parenting-icon-primary.png');
 }
 
 ons-tab.parenting-tab.active .ons-icon{
- background-image: url('/assets/parenting-icon.svg');
+ background-image: url('/assets/parenting-icon.png');
 }
 
 ons-tab.user-profile-tab .ons-icon{
@@ -7669,3 +7669,16 @@ ons-tab.user-profile-tab .ons-icon{
 	color: #fff;
 }
 
+
+/* Input styling  */
+
+.text-input--material__label {
+    left: 10px !important;
+    top: 10px !important; 
+}
+
+/* Tabbar */
+
+.toolbar--material{
+	background-color: #fff !important;
+}
