--- a/src/styles/interests.css
+++ b/src/styles/interests.css
@@ -19,7 +19,7 @@
 
 .interestsSelector .message{
 	position: absolute;
-	top : 10%;
+	top : 5%;
 	text-align: center;
 	width: 100%;
 	color: #8675A1 !important;
@@ -27,11 +27,16 @@
 
 .interestsSelector .selectionPanel{
 	position: absolute;
-	top : 20%;
+	top : 15%;
 }
  
-.interestsSelector .button{
+.interestsSelector button{
 	background-color: #8675A1 !important;
+    width: 100%;
+    padding: 15px;
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
 }
 
 .interestsSelector .continueButton{
