--- a/src/styles/interests.css
+++ b/src/styles/interests.css
@@ -37,6 +37,7 @@
     color: white;
     font-weight: bold;
     font-size: 16px;
+	border: none !important;
 }
 
 .interestsSelector .continueButton{
