added app icons fixed date input in ios

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -63,9 +63,14 @@
 
 .text-input{
 	width: 100% !important;
-	min-width: 100% !important;
-	margin: 0 auto;
+	min-width: 95% !important;
 }
+
+ons-input .text-input[type="date"]{
+	/*-webkit-appearance : none;*/
+	/*-moz-appearance : none;*/
+}
+
 
 ons-input .input{
 	width: 100% !important;
