few optimizations added

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -27,6 +27,11 @@ body,body p,body div{
 	margin-bottom: 5px;
 }
 
+
+ons-carousel{
+	overflow-y: hidden !important;
+}
+
 .card{
 
 	background : #fff;
