--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -210,29 +210,65 @@ ons-tab.user-profile-tab.active .ons-icon{
 /* Swich language preference */
 
 .switch{
-	width :  35% !important;
-	height : 25px; 
+	width :  110px !important;
+	height : 26px; 
 }
 
 
 :checked + .switch__toggle {
-    box-shadow: inset 0 0 0 2px #8675A1 !important;
-    background-color: #8675A1 !important;
+    box-shadow: inset 0 0 0 2px #fff !important;
+    background-color: #fff !important;
 }
 
 .switch__toggle{
-	background-color : #8675A1 !important;
-	box-shadow : inset 0 0 0 2px #8675A1 !important;
+	background-color : #fff !important;
+	box-shadow : inset 0 0 0 2px #fff !important;
 }
 
 :checked + .switch__toggle > .switch__handle {
-    left: calc(100% - 22px);
+    left: calc(100% - 25px);
 }
 
 
 .switch__handle{
-	height: 22px;
-	width:  22px;
+	height: 25px;
+	width:  25px;
+	left: 0px; 
+    background-color: #FF547C;
+    box-shadow: 0 0 0 1px #FF547C, 0 3px 2px rgba(0, 0, 0, .25);
+    top: 0px; 
+}
+
+/* Material Toggle */
+
+.switch--material{
+	height: 36px !important;
+}
+
+.switch--material__toggle{
+	height: 25px;
+}
+
+.switch--material__toggle  .switch__handle{
+	top: 5px;
+}
+
+
+:checked + .switch--material__toggle > .switch--material__handle {
+	background-color: #FF547C;
+
+}
+
+/* */
+.opacity{
+	opacity: 0.5;
+}
+.info-wrapper{
+	position: sticky !important;
+	position: -webkit-sticky !important;
+    position: -moz-sticky !important;
+  	position: -ms-sticky !important;
+  	position: -o-sticky !important;
 }
 
 /*  Fix top bar and bottom bar */
